--- a/src/app/posts/posts.component.html
+++ b/src/app/posts/posts.component.html
@@ -1,6 +1,7 @@
 <div class="list" *ngIf="posts">
+  <app-post-detail [post]="selectedPost"></app-post-detail>
   <mat-card class="list_card">
-    <a *ngFor="let post of posts" routerLink="/posts/{{ post.id }}">
+    <a *ngFor="let post of posts | async" (click)="onSelect(post)">
       <mat-card-title>{{ post.title }}</mat-card-title>
 
       <mat-card-subtitle> {{ post.body }}</mat-card-subtitle></a
