--- a/src/styles.scss
+++ b/src/styles.scss
@@ -8,3 +8,14 @@ body {
   margin: 0;
   font-family: Roboto, "Helvetica Neue", sans-serif;
 }
+
+.list {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: space-around;
+  &_card {
+    width: 500px;
+    margin-bottom: 10px;
+  }
+}
